--- a/css/main.css
+++ b/css/main.css
@@ -7,3 +7,64 @@ ul { padding: 0; margin: 0; list-style: none; }
 nav { padding: 10px 0; }
 h1, h2, h3, h4, h5, h6 { margin: 0; }
 /***************************************/
+
+.container { 
+    margin : 0 auto;
+    max-width: 1170px;
+}
+
+section{    display: flex;}
+
+.flex{    display : flex;}
+
+.flex-column{    flex-direction: column;}
+
+.flex-one{    flex : 1;}
+
+.align-center{    align-items: center;}
+
+.center{    justify-content: center;}
+
+.space-between{    justify-content: space-between;}
+
+.btn{
+    padding: 6px 12px;
+    line-height: 1.4px;
+    border: 0;
+    border-radius: 3px;
+    cursor: pointer;
+}
+
+.btn-default{
+    color: white;
+    background-color: #faa541;
+}
+
+.btn-primary{
+    color: white;
+    background-color: #364147;
+}
+
+.form-control{
+    display: block;
+    padding: 6px 12px;
+    border-color: #a0a0a0;
+    border: 1px;
+    color: #8598a2;
+    line-height: 1.4px;
+}
+
+.text-light{
+    font-size :30px;
+    color: #a0a0a0;
+}
+
+.text-secondary{
+    font-size :30px;
+    color: #faa541;
+}
+
+.text-primary{
+    font-size :16px;
+    color: #364147;
+}
