--- a/css/main.css
+++ b/css/main.css
@@ -28,30 +28,29 @@ section{    display: flex;}
 .space-between{    justify-content: space-between;}
 
 .btn{
-    padding: 6px 12px;
-    line-height: 1.4px;
-    border: 0;
-    border-radius: 3px;
     cursor: pointer;
+    border: 0;
+    padding: 6px 12px;
+    border-radius: 3px;
+    line-height: 1.4;
 }
 
 .btn-default{
-    color: white;
+    color: #ffffff;
     background-color: #faa541;
 }
 
 .btn-primary{
-    color: white;
+    color: #ffffff;
     background-color: #364147;
 }
 
 .form-control{
     display: block;
     padding: 6px 12px;
-    border-color: #a0a0a0;
-    border: 1px;
+    border: 1px solid #a0a0a0;
     color: #8598a2;
-    line-height: 1.4px;
+    line-height: 1.4;
 }
 
 .text-light{
