--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,23 @@ nav { padding: 10px 0; }
 h1, h2, h3, h4, h5, h6 { margin: 0; }
 /***************************************/
 
+.header-nav{
+    border-bottom: 1px;
+    color: #a0a0a0;
+}
+
+.brand{
+    width: 170px;
+    height: 85px;
+    margin-left: -15px;
+    margin-right: 60px;
+}
+
+.logo{
+    max-width: 100%;
+    height: auto;
+}
+
 .container { 
     margin : 0 auto;
     max-width: 1170px;
@@ -66,4 +83,53 @@ section{    display: flex;}
 .text-primary{
     font-size :16px;
     color: #364147;
+}
+
+.search-box{
+    width: 330px;
+    height: 30px;
+    padding : 6px 12px;
+    border: 1px solid #a0a0a0;
+}
+
+.search-button{
+    background-color: #a0a0a0;
+    color: #ffffff;
+    width: 100px;
+    height: 30px;
+    border: 0;
+    padding: 0;
+}
+
+.nav-list{
+    padding-left: 0px;
+    width: 575px;
+    margin-top: 10px;
+}
+
+.nav-list li a{
+    font-size: 16px;
+    text-transform: uppercase;
+    letter-spacing: 0.2px;
+}
+
+.profile{ margin-left: auto;}
+
+.account{
+    text-align: right;
+    padding: 15px;
+    color: #364147;
+    font-size: 18px;
+}
+
+.account a{    font-size: 14px;}
+
+.profile-pic{
+    height: 60;
+    width: 60;
+}
+
+.profile-pic img{
+    border-radius: 100px;
+    max-width: 100%;
 }
