minor changes for module 2

--- a/css/main.css
+++ b/css/main.css
@@ -111,6 +111,7 @@ section{    display: flex;}
     font-size: 16px;
     text-transform: uppercase;
     letter-spacing: 0.2px;
+    font-weight: 700;
 }
 
 .profile{ margin-left: auto;}
@@ -125,8 +126,8 @@ section{    display: flex;}
 .account a{    font-size: 14px;}
 
 .profile-pic{
-    height: 60;
-    width: 60;
+    height: 60px;
+    width: 60px;
 }
 
 .profile-pic img{
